container dep test

--- a/building/Dockerfile
+++ b/building/Dockerfile
@@ -46,6 +46,8 @@ RUN dpkg --add-architecture arm64 && apt-get update -y && apt-get install -y \
     gcc gcc-aarch64-linux-gnu \
     libdbus-1-dev libdbus-1-dev:arm64 \
     rpm \
+    # install `bsdtar`, required for creating pacman archives
+    libarchive-tools \
     # For cross-compiling/linting towards Windows
     gcc-mingw-w64-x86-64 \
     && rm -rf /var/lib/apt/lists/*
